# dimg-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROUNDTRIP_TESTS.md  build-release.sh
include/: dimg.h  disc.h
src/: cmd_convert.c  cmd_info.c  cmd_verify.c  disc.c  fmt_aaru.c  fmt_cue.c  fmt_iso.c  fmt_sbi.c  main.c
